--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             Home</a>
                     </li>
                     <li class="nav-item dropdown" x-data="{ open: false }">
-                        <a class="nav-link dropdown-toggle" href="#" @click="open = !open" data-turbolinks=false><i
+                        <a class="nav-link dropdown-toggle" @click="open = !open" data-turbolinks=false><i
                                 class="bi bi-gear"></i> Tools</a>
                         <div class="dropdown-menu position-absolute" x-show=open x-transition.scale.origin.top
                             @click.away="open = false">
@@ -182,7 +182,7 @@
                         Home</a>
                 </li>
                 <li class="nav-item  nav-home dropdown" x-data="{ open: false }">
-                    <a class="nav-link dropdown-toggle" href="#" @click="open = !open" data-turbolinks=false><i
+                    <a class="nav-link dropdown-toggle" @click="open = !open" data-turbolinks=false><i
                             class="bi bi-gear"></i>
                         Tools</a>
                     <div class="dropdown-menu position-absolute" x-show=open x-transition.scale.origin.top
