--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class=container>
             <a class="navbar-brand font-weight-bold nav-title" href="#" aria-label="Go to home"><img src="img/icon.png"
                     class="d-inline-block align-bottom mr-1" height="30" width="30" alt=""><a
-                    class="text-light nav-title mr-3">Codetemp</a>
+                    class="text-light nav-title mr-3">Codeweb</a>
             </a>
             <div class="ml-auto order-1">
                 <button aria-label="Side Menu"
