--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta property="og:image:height" content="360">
     <meta property="og:image:alt" content="Codeweb | Tempat berbagai template dan tutorial seputar web">
     <meta itemprop=name content="Codeweb">
+    <script src="https://kit.fontawesome.com/42acf72f0c.js" crossorigin="anonymous"></script>
     <script type="application/ld+json">
 {
   "@context": "https://schema.org/",
@@ -33,6 +34,8 @@
   }
 }
 </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <meta content="Indonesian" name=language>
     <meta name=theme-color content="#008080">
     <meta name=msapplication-navbutton-color content="#008080">
@@ -56,7 +59,37 @@
         }
     </style>
     <script type=text/javascript src="js/main.min.js" defer></script>
+    <script>
+        $(document).ready(function () {
+            $('.menu-drop').click(function () {
+                $('.updrop').slideToggle('slow');
+            })
 
+            $('.open-menu').click(function () {
+                $('.menu-side').slideToggle('slow');
+            })
+            $('.close-menu').click(function () {
+                $('.menu-side').slideToggle('fast');
+            })
+            $('.msg_head').click(function () {
+                $('.msg_wrap').slideToggle('slow');
+                $('#icon').toggleClass('iconrotate');
+                $('#chat').toggleClass('iconchat');
+            });
+            $(".user").click(function () {
+                $('.msg_wrap').show();
+                $('.msg_box').show();
+            });
+            $('input').keypress(function (e) {
+                if (e.keyCode == 13) {
+                    var msg = $(this).val();
+                    $(this).val('');
+                    $("<div class='msg_b'>" + msg + "</div>").insertBefore('.msg_insert');
+                    $('.msg_body').scrollTop($('.msg_body')[0].scrollHeight);
+                }
+            });
+        });
+    </script>
 </head>
 
 <body class=bg-light>
@@ -258,6 +291,28 @@
     </div>
 
 
+
+    <div class="msg_box" style="right: 29px">
+        <div class="msg_head"><i id="chat" class="fas fa-fw fa-comments"></i> Chatbox <i id="icon" style="float: right;"
+                class="fas fa-arrow-alt-circle-up"></i></div>
+        <div class="msg_wrap" style="display: none;">
+            <div class="msg_body">
+                <div class="msg_a">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta, quibusdam commodi
+                    sint
+                    atque impedit deleniti necessitatibus officiis error ipsum veniam quod quos quis libero non,
+                    eligendi
+                    optio unde neque magnam?</div>
+                <div class="msg_b">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque quam architecto
+                    alias, placeat commodi nulla sed fuga eveniet et, quaerat dicta optio est eius porro ipsam
+                    praesentium
+                    quod, nemo repellat.</div>
+                <div class="msg_insert"></div>
+            </div>
+            <div class="msg_footer">
+                <input type="text" rows="1" class="msg_input" placeholder="Press Enter to send Message"></input>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
